Fix z-index issue in global header

--- a/portal/src/app/shared/components/global-header/GlobalHeader.module.scss
+++ b/portal/src/app/shared/components/global-header/GlobalHeader.module.scss
@@ -17,6 +17,7 @@ $headerSuperUser: #a4f1c1;
   position: sticky;
   top: 0;
   width: 100%;
+  z-index: 2;
 }
 
 .header_left_block,
